--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
     <div class="container">
       <div class="card">
-        <span class="emoji">✋</span>
+        <span style="background-color: var(--yellow)" class="emoji">✋</span>
         <h3>Collect Feedback at Multiple Touchpoints</h3>
         <p>Provide a comprehensive understanding of the customer experience.</p>
         <img src="./resources/photo_1.png" alt="photo_1" />
       </div>
       <div class="card">
-        <span class="emoji">🥅</span>
+        <span style="background-color: var(--blue)" class="emoji">🥅</span>
         <h3>Ask Targeted and Specific Questions</h3>
         <p>
           Avoid vague or open-ended questions that may not yield actionable
@@ -35,7 +35,7 @@
         <img src="./resources/photo_2.png" alt="photo_2" />
       </div>
       <div class="card">
-        <span class="emoji">💬</span>
+        <span style="background-color: var(--pink)" class="emoji">💬</span>
         <h3>Prioritize and Respond to Feedback</h3>
         <p>
           Communicate the changes or improvements you've made in response to
